--- a/html/gallery.html
+++ b/html/gallery.html
@@ -9,10 +9,10 @@
     <div class="row">
       <div align="center" class='col-12'>
         <button class="filter-button actives" data-filter="all">All</button>
-        <button class="filter-button" data-filter="hdpe">HDPE Pipes</button>
-        <button class="filter-button" data-filter="sprinkle">Sprinkle Pipes</button>
-        <button class="filter-button" data-filter="spray">Spray Nozzle</button>
-        <button class="filter-button" data-filter="irrigation">Irrigation Pipes</button>
+        <button class="filter-button" data-filter="hdpe">ceramic</button>
+        <button class="filter-button" data-filter="sprinkle">glass</button>
+        <button class="filter-button" data-filter="spray">wood</button>
+        <button class="filter-button" data-filter="irrigation">decorative object</button>
       </div>
       <br />
       <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter hdpe">
