--- a/html/products.html
+++ b/html/products.html
@@ -35,8 +35,8 @@
       <div class="col-lg-2 side col-sm-3 col-xs-12">
         <ul class="categories">
           <li>
-            <a href="#ceramicsubmenu" data-toggle='collapse' aria-expanded="false" class="dropdown-toggle">ceramic</a>
-            <ul id="ceramicsubmenu" class="collapse">
+            <a href=".ceramicsubmenu" data-toggle='collapse' aria-expanded="false" class="dropdown-toggle">ceramic</a>
+            <ul class="ceramicsubmenu" class="collapse">
               <li><a href="">tea pots</a></li>
               <li><a href="">vase</a></li>
               <li><a href="">tea cups</a></li>
@@ -88,7 +88,7 @@
             <span class="decorative-icon-right"></span>
           </div>
           <div class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item">
-            <a href="productdetails/vase00.html">
+            <a href="html/productdetails/vase00.html">
               <img src="https://cb2.scene7.com/is/image/CB2/SurReactiveVaseSHS19/?$web_product_hero$&180917104904&wid=625&hei=625" alt="">
               <div class="content">CERAMIC VASE</div>
             </a>
