--- a/html/products.html
+++ b/html/products.html
@@ -53,9 +53,11 @@
       </div>
       <div class="Gallery col-lg-10 col-sm-9">
         <div class="title">
-          <span class="decorative-icon-left"></span>
-          <h1 class="text-center">tea pots</h1>
-          <span class="decorative-icon-right"></span>
+          <h1 class="text-center">
+            <span class="decorative-icon-left"></span>
+            tea pots
+            <span class="decorative-icon-right"></span>
+          </h1>
         </div>
         <div class="row pics">
           <div class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item">
@@ -83,9 +85,11 @@
             </a>
           </div>
           <div class="title col-12">
-            <span class="decorative-icon-left"></span>
-            <h1 class="text-center">vases</h1>
-            <span class="decorative-icon-right"></span>
+            <h1 class="text-center">
+              <span class="decorative-icon-left"></span>
+              vases
+              <span class="decorative-icon-right"></span>
+            </h1>
           </div>
           <div class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item">
             <a href="html/productdetails/vase00.html">
@@ -112,9 +116,11 @@
             </a>
           </div>
           <div class="title col-12">
-            <span class="decorative-icon-left"></span>
-            <h1 class="text-center" id='teacup'>tea cup</h1>
-            <span class="decorative-icon-right"></span>
+            <h1 class="text-center">
+              <span class="decorative-icon-left"></span>
+              tea cups
+              <span class="decorative-icon-right"></span>
+            </h1>
           </div>
 
           <div class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item">
