--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body ng-app='myApp'>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav pt-3">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav">
       <a class="navbar-brand" id='logo' href="#"><img src="images/logo-small0.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContentLG" aria-controls="navbarSupportedContentLG" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
