--- a/index.html
+++ b/index.html
@@ -25,37 +25,39 @@
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
   <script src="js/app.js" charset="utf-8"></script>
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   <script src="OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
+  <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.0.3.js" charset="utf-8"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/formvalidation.js" charset="utf-8"></script>
   <title>Home</title>
 </head>
 <body ng-app='myApp'>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav">
-      <a class="navbar-brand" id='logo' href="#"><img src="images/logo-small0.png" alt=""></a>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav transparent" id='navbar'>
+      <a id='logo' class="navbar-brand" href="#"><img   src="images/logo-small0.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContentLG" aria-controls="navbarSupportedContentLG" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContentLG">
         <ul class="navbar-nav mr-auto  space">
-          <li class="nav-item active">
+          <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='home'>Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='gallery'>Gallery</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='products'>Products</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='aboutus'>about us</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='contactus'>contact us</a>
           </li>
         </ul>
