--- a/html/products.html
+++ b/html/products.html
@@ -36,7 +36,7 @@
         <ul class="categories">
           <li ng-click='filterText=""'><a href="">all</a></li>
           <li>
-            <a href=".ceramicsubmenu" data-toggle='collapse' aria-expanded="false" class="dropdown-toggle">ceramic</a>
+            <a href=".ceramicsubmenu" data-toggle='collapse' class="dropdown-toggle">ceramic</a>
             <ul class="ceramicsubmenu" class="collapse">
               <li ng-click='filterText="teapot"'><a href="">tea pots</a></li>
               <li ng-click='filterText="vase"'><a href="">vase</a></li>
@@ -54,16 +54,18 @@
       </div>
       <div class="Gallery col-lg-10 col-sm-9">
         <div class="row pics">
-          <div ng-repeat='product in filterData = (products | filter : filterText ) | limitTo:12:12*(page-1)' class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item {{product.class}}">
+          <div ng-repeat='product in filterData = (products | filter : filterText ) | limitTo:8:8*(page-1)' class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item {{product.class}}">
             <a href="">
               <img src="{{product.img}}" alt="">
               <div class="content">{{product.name}}</div>
             </a>
           </div>
         </div>
-        <ul uib-pagination total-items="filterData.length" ng-model="CurrentPage"
+        <!-- paging -->
+        <uib-pagination class="pagination-sm" total-items="filterData.length" ng-model="page"
 
-         max-size="maxSize" class="pagination-sm" rotate="false"></ul>
+         ng-change="pageChanged()" previous-text="&lsaquo;" next-text="&rsaquo;" items-per-page=8 rotate='false'></uib-pagination>
+        <script type="text/javascript">
       </div>
     </div>
 
