--- a/html/products.html
+++ b/html/products.html
@@ -36,8 +36,8 @@
         <ul class="categories">
           <li ng-click='filterText=""'><a href="">all</a></li>
           <li>
-            <a href=".ceramicsubmenu" data-toggle='collapse' class="dropdown-toggle">ceramic</a>
-            <ul class="ceramicsubmenu" class="collapse">
+            <a href="" class="dropdown-toggle" >ceramic</a>
+            <ul class="ceramicsubmenu submenu" >
               <li ng-click='filterText="teapot"'><a href="">tea pots</a></li>
               <li ng-click='filterText="vase"'><a href="">vase</a></li>
               <li ng-click='filterText="teacup"'><a href="">tea cups</a></li>
