--- a/html/products.html
+++ b/html/products.html
@@ -1,5 +1,5 @@
 <div class="respon">
-    <div id="carousel1" class="carousel slide mb-5" data-ride="carousel">
+    <!-- <div id="carousel1" class="carousel slide mb-5" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carousel1" data-slide-to="0" class="active"></li>
         <li data-target="#carousel1" data-slide-to="1"></li>
@@ -28,7 +28,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
+    </div> -->
     <!-- het carousel-1  -->
     <!-- Gallery -->
     <div class="row">
