--- a/html/gallery.html
+++ b/html/gallery.html
@@ -9,58 +9,14 @@
     <div class="row">
       <div align="center" class='col-12'>
         <button class="filter-button actives" data-filter="all">All</button>
-        <button class="filter-button" data-filter="hdpe">ceramic</button>
-        <button class="filter-button" data-filter="sprinkle">glass</button>
-        <button class="filter-button" data-filter="spray">wood</button>
+        <button class="filter-button" data-filter="teapot">tea pot</button>
+        <button class="filter-button" data-filter="vase">vase</button>
+        <button class="filter-button" data-filter="teacup">tea cup</button>
         <button class="filter-button" data-filter="irrigation">decorative object</button>
       </div>
       <br />
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter hdpe">
-        <img src="https://farm3.staticflickr.com/2426/4008810180_5393bb24b9.jpg" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter sprinkle">
-        <img src="https://picsum.photos/400/400/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter hdpe">
-        <img src="https://picsum.photos/401/400/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter irrigation">
-        <img src="https://picsum.photos/400/401/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter spray">
-        <img src="https://picsum.photos/402/400/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter irrigation">
-        <img src="https://picsum.photos/403/402/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter spray">
-        <img src="https://picsum.photos/401/403/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter irrigation">
-        <img src="https://picsum.photos/402/401/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter irrigation">
-        <img src="https://picsum.photos/402/400/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter hdpe">
-        <img src="https://picsum.photos/400/402/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter spray">
-        <img src="https://picsum.photos/403/400/?random" class="img-responsive">
-      </div>
-
-      <div class="gallery_product col-xl-3 col-md-4  col-xs-6 filter sprinkle">
-        <img src="https://picsum.photos/401/401/?random" class="img-responsive">
+      <div ng-repeat='product in products' class="gallery_product col-xl-3 col-md-4  col-xs-6 filter {{product.class}}">
+        <img src="{{product.img}}" class="img-responsive">
       </div>
     </div>
 </div>
