--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -8,13 +8,13 @@
         <div class="card">
           <div class="card-header" id="headingOne">
             <h2 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-link getValue" type="button" data-toggle="collapseOne">
                 <i class="fas fa-info-circle"></i> ABOUT US
               </button>
             </h2>
           </div>
 
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div id="collapseOne" class="collapse show">
             <div class="card-body text">
               <h1 class="text-center">ABOUT US</h1>
               <p>
@@ -40,13 +40,13 @@
         <div class="card">
           <div class="card-header" id="headingfive">
             <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapsefive" aria-expanded="true" aria-controls="collapsefive">
+              <button class="btn btn-link getValue" type="button" data-toggle="collapsefive">
                 <i class="fas fa-arrow-alt-circle-right"></i> EXPORT STANDARDS OF THE COMPANY
               </button>
             </h2>
           </div>
 
-          <div id="collapsefive" class="collapse" aria-labelledby="headingfive" data-parent="#accordionExample">
+          <div id="collapsefive" class="collapse" >
             <div class="card-body text">
               <h1 class="text-center">EXPORT STANDARDS OF THE COMPANY</h1>
               <p>Venus-Handicrafts is considered to be a prestige unit and a center of producing handicraft ceramics, fine-art ceramics and household ceramics. Our unit specializes in supplying and exporting high quality and high quality ceramic
@@ -70,12 +70,12 @@
         <div class="card">
           <div class="card-header" id="headingTwo">
             <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+              <button class="btn btn-link getValue" type="button" data-toggle="collapseTwo" >
                 <i class="fas fa-cog"></i> ARTICLES OF CREATING CRAFTS
               </button>
             </h2>
           </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+          <div id="collapseTwo" class="collapse">
             <div class="card-body text">
               <h1 class="text-center">ARTICLES OF CREATING CRAFTS:</h1>
               <p>The process of producing handicrafts made by the traditional artists of the nation for a long time such as ceramic products, bamboo and rattan, lacquer mosaic ...</p>
@@ -103,7 +103,7 @@
         <div class="card">
           <div class="card-header" id="headingThree">
             <h2 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              <button class="btn btn-link getValue" type="button" data-toggle="collapseThree">
                 <i class="fas fa-trophy"></i> 2015 CONFINDUSTRIA CERAMIC DISTRIBUTOR AWARD
               </button>
             </h2>
@@ -127,12 +127,12 @@
         <div class="card">
           <div class="card-header" id="headingfour">
             <h2 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsefour" aria-expanded="true" aria-controls="collapsefour">
+              <button class="btn btn-link getValue" type="button" data-toggle="collapsefour">
                 <i class="fab fa-galactic-senate"></i> VISION,CORE COMPETENCIES,MISSION AND VALUE
               </button>
             </h2>
           </div>
-          <div id="collapsefour" class="collapse" aria-labelledby="headingfour" data-parent="#accordionExample">
+          <div id="collapsefour" class="collapse">
             <div class="card-body text">
               <h1 class="text-center">VISION,CORE COMPETENCIES,MISSION AND VALUE</h1>
               <p><strong>VISION:</strong>Bringing Bat Trang ceramics products to reach many customers across the country<br />
