--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top main-nav transparent" id='navbar'>
       <a id='logo' class="navbar-brand" href="#"><img   src="images/logo-small0.png" alt=""></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContentLG" aria-controls="navbarSupportedContentLG" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="navbarSupportedContentLG">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContentLG">
+      <div class="navbar-collapse" id="navbarSupportedContentLG">
         <ul class="navbar-nav mr-auto  space">
           <li class="nav-item" ui-sref-active='active'>
             <a class="nav-link" ui-sref='home'>Home <span class="sr-only">(current)</span></a>
