--- a/html/gallery.html
+++ b/html/gallery.html
@@ -15,7 +15,7 @@
         <button class="filter-button" data-filter="irrigation">decorative object</button>
       </div>
       <br />
-      <div ng-repeat='product in products' class="gallery_product col-xl-3 col-md-4  col-xs-6 filter {{product.class}}">
+      <div ng-repeat='product in products' class="gallery_product col-xl-3 col-md-4  col-sm-6 filter {{product.class}}">
         <img src="{{product.img}}" class="img-responsive">
       </div>
     </div>
