--- a/html/home.html
+++ b/html/home.html
@@ -1,29 +1,24 @@
 <div class="banner">
   <img src="images/banner.jpg" alt="">
+  <div class="layer">
+    <div class="down">venus Handicraft</div>
+    <div class="qoute">we bring out the best</div>
+    <button type="button" name="button">find more</button>
+  </div>
 </div>
 <div class="respon">
   <div class="aboutus">
-    <div class="row">
-      <div class="col-md-8 col-xs-12">
-        <div class="img-about">
-          <img src="images/about/pexels-photo-1368037.jpeg" alt="">
+      <div class="infomation-aboutus">
+        <div class="h3">ABOUT US</div>
+        <div class="details">
+          <p>Venus Handicraft was established in 1988 as a company specializing in providing ceramic collections for everyone in the world.</p>
+          <p>Our main focus is on the commercial sector, providing innovative and beautiful products for retail, online, and retail locations.</p>
+          <p>Our ultimate goal is the opportunity to become a valuable resource for architectural and design professionals, as well as their customers.</p>
         </div>
       </div>
-      <div class="col-md-4 col-xs-12" id="asd">
-        <div class="infomation-aboutus">
-          <div class="h3">ABOUT US</div>
-          <div class="details">
-            <p>Venus Handicraft was established in 1988 as a company specializing in providing ceramic collections for everyone in the world.</p>
-            <p>Our main focus is on the commercial sector, providing innovative and beautiful products for retail, online, and retail locations.</p>
-            <p>As you continue through our website, we hope you will see interesting collections of delicate porcelain tiles, romantic natural limestone and innovative glass mosaics that will inspire design. for your next project.</p>
-            <p>Our ultimate goal is the opportunity to become a valuable resource for architectural and design professionals, as well as their customers.</p>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <div class="home">
-    <div class="container mt-4">
+    <div class=" mt-4">
       <div class="row">
         <div class="title">
           <h1 class="text-center">
@@ -34,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="container mt-3">
+    <div class=" mt-3">
       <div class="row">
         <div class="owl-carousel SliderTopDeal owl-theme">
           <div class="item">
@@ -103,7 +98,7 @@
     </div>
 
 
-    <div class="container mt-4">
+    <div class=" mt-4">
       <div class="row">
         <div class="title">
           <h1 class="text-center">
@@ -114,12 +109,12 @@
         </div>
       </div>
     </div>
-    <div class="container mt-3">
+    <div class=" mt-3">
       <div class="row">
         <div class="owl-carousel SliderTopDeal owl-theme">
           <div class="item">
             <div class="card">
-              <a href=""></a><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
+              <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
               <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
               </div>
             </div>
@@ -128,7 +123,7 @@
 
           <div class="item">
             <div class="card">
-              <a href=""></a><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
+              <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
               <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
               </div>
             </div>
