--- a/html/products.html
+++ b/html/products.html
@@ -54,7 +54,7 @@
       </div>
       <div class="Gallery col-lg-10 col-sm-9">
         <div class="row pics">
-          <div ng-repeat='product in filterData = (products | filter : filterText ) | limitTo:8:8*(page-1)' class="col-md-6 col-sm-12 col-xl-3 col-lg-4 gal-item {{product.class}}">
+          <div ng-repeat='product in filterData = (products | filter : filterText ) | limitTo:8:8*(page-1)' class="col-sm-6 col-xl-3 col-lg-4 gal-item {{product.class}}">
             <a href="">
               <img src="{{product.img}}" alt="">
               <div class="content">{{product.name}}</div>
