--- a/html/home.html
+++ b/html/home.html
@@ -18,158 +18,201 @@
       </div>
   </div>
   <div class="home">
-    <div class=" mt-4">
-      <div class="row">
-        <div class="title">
-          <h1 class="text-center">
-            <span class="decorative-icon-left"></span>
-            Top Deal
-            <span class="decorative-icon-right"></span>
-          </h1>
-        </div>
-      </div>
-    </div>
-    <div class=" mt-3">
-      <div class="row">
-        <div class="owl-carousel SliderTopDeal owl-theme">
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
-              </div>
-            </div>
+      <div class="container mt-4">
+        <div class="row">
+          <div class="title">
+            <h1 class="text-center">
+              <span class="decorative-icon-left"></span>
+              Top Deal
+              <span class="decorative-icon-right"></span>
+            </h1>
           </div>
         </div>
       </div>
-    </div>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="owl-carousel SliderTopDeal owl-theme">
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
 
 
-    <div class=" mt-4">
-      <div class="row">
-        <div class="title">
-          <h1 class="text-center">
-            <span class="decorative-icon-left"></span>
-            New Product
-            <span class="decorative-icon-right"></span>
-          </h1>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class=" mt-3">
-      <div class="row">
-        <div class="owl-carousel SliderTopDeal owl-theme">
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+
+
+      <div class="container mt-4">
+        <div class="row">
+          <div class="title">
+            <h1 class="text-center">
+              <span class="decorative-icon-left"></span>
+              New
+              <span class="decorative-icon-right"></span>
+            </h1>
+          </div>
+        </div>
+      </div>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="owl-carousel SliderTopDeal owl-theme">
+            <div class="item">
+              <div class="card">
+                <a href=""></a><img src="../images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""></a><img src="../images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
-          </div>
 
 
-          <div class="item">
-            <div class="card">
-              <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
-              <div class="content">BLUE GLAZE TEAPOT SET 3<div class="price"><s>$12</s>now : $9.99 </div>
+            <div class="item">
+              <div class="card">
+                <a href=""><img src="../images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <div class="card-body">
+                  <h4>BLUE GLAZE TEAPOT SET 3</h4>
+                  <h5>$ <span class="text-center">23</span></h5>
+                  <button class="btn btn-primary btn-sm">Buy Now</button>
+                </div>
               </div>
             </div>
           </div>
@@ -177,4 +220,3 @@
       </div>
     </div>
   </div>
-</div>
