--- a/html/home.html
+++ b/html/home.html
@@ -34,7 +34,7 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -46,7 +46,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -58,7 +58,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -70,7 +70,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -82,7 +82,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -94,7 +94,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -106,7 +106,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -135,7 +135,7 @@
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""></a><img src="../images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <a href=""></a><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -147,7 +147,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""></a><img src="../images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <a href=""></a><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -159,7 +159,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product3.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product3.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -171,7 +171,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product4.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product4.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -183,7 +183,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product5.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product5.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -195,7 +195,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product6.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product6.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -207,7 +207,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""><img src="../images/product/product7.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product7.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
