--- a/html/home.html
+++ b/html/home.html
@@ -3,7 +3,7 @@
   <div class="layer">
     <div class="down">venus Handicraft</div>
     <div class="qoute">we bring out the best</div>
-    <button type="button" name="button">find more</button>
+    <a class="findMore" ui-sref='aboutus'>find more</a>
   </div>
 </div>
 <div class="respon">
@@ -18,7 +18,7 @@
       </div>
   </div>
   <div class="home">
-      <div class="container mt-4">
+      <div class="mt-4">
         <div class="row">
           <div class="title">
             <h1 class="text-center">
@@ -29,7 +29,7 @@
           </div>
         </div>
       </div>
-      <div class="container mt-3">
+      <div class="mt-3">
         <div class="row">
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
@@ -119,7 +119,7 @@
       </div>
 
 
-      <div class="container mt-4">
+      <div class="mt-4">
         <div class="row">
           <div class="title">
             <h1 class="text-center">
@@ -130,12 +130,12 @@
           </div>
         </div>
       </div>
-      <div class="container mt-3">
+      <div class="mt-3">
         <div class="row">
           <div class="owl-carousel SliderTopDeal owl-theme">
             <div class="item">
               <div class="card">
-                <a href=""></a><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product1.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
@@ -147,7 +147,7 @@
 
             <div class="item">
               <div class="card">
-                <a href=""></a><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
+                <a href=""><img src="images/product/product2.jpg" alt="" class="card-img-top"></a>
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
