--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <script src="OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/formvalidation.js" charset="utf-8"></script>
+  <!-- product details -->
+  
   <title>Home</title>
 </head>
 <body ng-app='myApp'>
