--- a/index.html
+++ b/index.html
@@ -23,16 +23,40 @@
 
     <!-- gg fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700&amp;subset=vietnamese" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-migrate-3.0.1.min.js"></script>
+  <!-- AngularJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-cookies.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-animate.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.1/angular-material.min.js"></script>
+  <script src="https://rawgit.com/ismarslomic/angular-read-more/master/dist/readmore.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-sanitize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-touch.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
+  <!-- Slick JS -->
   <!-- script -->
   <script src="https://code.angularjs.org/1.4.8/angular.js"></script>
   <script src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-1.0.3.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.22/angular-ui-router.min.js"></script>
   <script src="js/app.js" charset="utf-8"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
   <script src="js/main.js" charset="utf-8"></script>
   <script src="js/formvalidation.js" charset="utf-8"></script>
+  <!-- product details -->
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link rel="stylesheet" href="css/readmore.css">
+  <!-- External Css file -->
+  <link rel="stylesheet" href="css/productdetail.css">
+  <link rel="stylesheet" href="css/cart.css">
+  <script src="slick/slick.js"></script>
+  <!-- Angular-Slick -->
+  <script src="slick/dist/slick.js"></script>
   <title>Home</title>
 </head>
 <body ng-app='myApp'>
