--- a/html/home.html
+++ b/html/home.html
@@ -8,12 +8,29 @@
 </div>
 <div class="respon">
   <div class="aboutus">
-      <div class="infomation-aboutus">
-        <div class="h3">ABOUT US</div>
-        <div class="details">
-          <p>Venus Handicraft was established in 1988 as a company specializing in providing ceramic collections for everyone in the world.</p>
-          <p>Our main focus is on the commercial sector, providing innovative and beautiful products for retail, online, and retail locations.</p>
-          <p>Our ultimate goal is the opportunity to become a valuable resource for architectural and design professionals, as well as their customers.</p>
+      <div class="row">
+        <div class="col-lg-8 col-md-8">
+          <div class="container">
+            <div class="content">
+              <div class="image-about">
+                <img src="images/about/pottery.jpg" alt="" width="300" height="300">
+              </div>
+              <div class="details">
+                <h3 class ="title">About Us</h3>
+                <div class="excerp">
+                  <p>Venus Handicraft was established in 1988 as a company specializing in providing handicraft collections for people all over the world [...]</p>
+                </div>
+                <div class="button-about">
+                <button class="btn btn-primary btn-sm">Read More</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4">
+          <div class="gallery-at-home">
+            <img src="images/gallery-at-home.jpg" alt="" width="300px" height="300px">
+          </div>
         </div>
       </div>
   </div>
