--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </form>
     </div> <!-- end chat -->
   </div> <!-- end live-chat -->
-  <footer class="container-fluid">
+  <footer class="">
     <div class="foot ">
       <p class="">©2019 by Venus-Handicrafts.</p>
       <span class="footer-menu ">
