--- a/html/details.html
+++ b/html/details.html
@@ -1,8 +1,6 @@
-<div class="respon" ng-repeat="product in products">
+<div class="respon" ng-repeat="product in products | filter : productId">
 
-  <div class="row" ng-swipe-right="nextSlide()" ng-swipe-left="prevSlide()" ng-hide="!isCurrentSlideIndex($index)">
-    <a class="arrow prev" ng-click="nextSlide()"></a>
-    <a class="arrow next" ng-click="prevSlide()"></a>
+  <div class="row">
     <!-- Product Display -->
     <div class="col-md-9 col-sm-8 product-display">
 
@@ -13,7 +11,7 @@
         </div>
 
         <slick class="slider-for" autoplay="true" lazy-load="ondemand" breakpoint="480" slides-to-show="1" slides-to-scroll="1" fade="true" as-nav-for=".slider-nav">
-          <div light-gallery ng-repeat="imgsource in product.imgsources" data-src="{{ imgsource.image }}">
+          <div ng-repeat="imgsource in product.imgsources">
             <img ng-src="{{ imgsource.image }}">
           </div>
         </slick>
@@ -35,9 +33,6 @@
           <p> {{ product.summary }} </p>
 
           <span id="more" hm-read-more hm-text="{{product.moresummary}}" hm-limit="{{limit}}" hm-more-text="{{moreText}}" hm-less-text="{{lessText}}" hm-dots-class="{{dotsClass}}" hm-link-class="{{linkClass}}">
-            <!-- <ul>
-                <li ng-repeat="detail in product.details"> {{ detail.list }} </li>
-              </ul> -->
           </span>
 
           <!-- End of ReadMore/Less text -->
@@ -57,7 +52,6 @@
       <div class="price">
         <h1 id="result">{{ product.price | currency }}</h1>
 
-        <!-- <h1 id="result">{{ product.price | currency }}</h1> -->
       </div>
       <button type="submit" ng-click="addItemToCart(product)" class="btn btn-dark btn-block addcart">Add to cart</button>
     </div>
@@ -80,6 +74,7 @@
       </ul>
 
       Total : {{total | currency}}
+      <div><a ui-sref='cart'>view cart</a></div>
     </div>
     <!-- End of CartShow -->
 
