--- a/html/home.html
+++ b/html/home.html
@@ -9,11 +9,11 @@
 <div class="respon">
   <div class="aboutus">
       <div class="row">
-        <div class="col-lg-8 col-md-8">
+        <div class="col-lg-8 col-md-8 col-sm-12 wrapper" >
           <div class="container">
             <div class="content">
               <div class="image-about">
-                <img src="images/about/pottery.jpg" alt="" width="300" height="300">
+                <img src="images/about/pottery.jpg" alt="" width="250" height="250">
               </div>
               <div class="details">
                 <h3 class ="title">About Us</h3>
@@ -27,9 +27,9 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="gallery-at-home">
-            <img src="images/gallery-at-home.jpg" alt="" width="300px" height="300px">
+            <a href="html/gallery.html"><img src="images/gallery-at-home.jpg" alt="" width="300px" height="300px"></a>
           </div>
         </div>
       </div>
