--- a/html/home.html
+++ b/html/home.html
@@ -35,7 +35,7 @@
       </div>
   </div>
   
-  <div class="home">
+  <div class="list">
       <div class="mt-4">
         <div class="row">
           <div class="title">
