--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <span class="chat-time">14:07</span>
             <h5>Adam Smith</h5>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, nulla accusamus magni vel debitis numquam qui tempora rem voluptatem delectus!</p>
+            <p>I am interested in your product Sur Reactive Vase. Our company is an importer from USA. We would like 1000 pieces of it so I would like to discuss more about the wholesale price.</p>
 
           </div> <!-- end chat-message-content -->
         </div> <!-- end chat-message -->
@@ -134,7 +134,7 @@
           <div class="chat-message-content clearfix">
             <span class="chat-time">14:08</span>
             <h5>Venus Consultant</h5>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            <p>Thanks for your asking. May I ask you some more information, sir?</p>
           </div> <!-- end chat-message-content -->
         </div> <!-- end chat-message -->
         <hr>
@@ -152,45 +152,19 @@
   </div> <!-- end live-chat -->
   <footer class="">
     <div class="foot ">
-      <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-          <header class="footer-title">
-            <h2>Policy</h2>
-          </header>
-          <div class="FooterLink">
-            <a href="#"><p>Sales Policy</p></a>
-          </div>
-          <div class="FooterLink">
-            <a href="#"><p>Privacy Policy</p></a>
-          </div>
-          <div class="FooterLink">
-            <a href="#"><p>Payment Policy</p></a>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-          <header class="footer-title">
-            <h2>Customer Service</h2>
-          </header>
-          <div class="FooterLink">
-            <a href="#"><p>My Order</p></a>
-          </div>
-          <div class="FooterLink">
-            <a href="#"><p>Help Center</p></a>
-          </div>
-          <div class="FooterLink">
-            <a href="#"><p>Report a Bug</p></a>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
-          <header class="footer-title">
-            <h2>Reach Us</h2>
-          </header>
-          <p>8 Ton That Thuyet St,Nam Tu Liem,Hanoi</p>
-          <p>Tell: +84916-888-991</p>
-          <p>Email: info@venus.com</p>
-          <p>Mon-Fri: 7am-5pm</p>
-          <p>Saturday: 8am-5pm</p>
-          <p>Sunday:8am-11pm</p>
-        </div>
+      <p class="">©2019 by Venus-Handicrafts.</p>
+      <span class="footer-menu ">
+        <a ui-sref='home'>Home</a>
+        <a ui-sref='gallery'>Gallery</a>
+        <a ui-sref='products'>Products</a>
+        <a ui-sref='aboutus'>About Us</a>
+        <a ui-sref='contactus'>Contact Us</a>
+      </span>
+      <div class="contact2">
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-instagram"></i> </a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
+      </div>
     </div>
   </footer>
 </body>
