--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 wrapper" >
           <div class="container">
-            <div class="content">
+            <div class="content-about">
               <div class="image-about">
                 <img src="images/about/pottery.jpg" alt="" width="250" height="250">
               </div>
@@ -34,7 +34,7 @@
         </div>
       </div>
   </div>
-  
+
   <div class="list">
       <div class="mt-4">
         <div class="row">
@@ -56,7 +56,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -68,7 +68,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -80,7 +80,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -92,7 +92,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -116,7 +116,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -128,7 +128,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -157,7 +157,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -169,7 +169,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -193,7 +193,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -205,7 +205,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -217,7 +217,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
@@ -229,7 +229,7 @@
                 <div class="card-body">
                   <h4>BLUE GLAZE TEAPOT SET 3</h4>
                   <h5>$ <span class="text-center">23</span></h5>
-                  <button class="btn btn-primary btn-sm">Buy Now</button>
+
                 </div>
               </div>
             </div>
