--- a/index.html
+++ b/index.html
@@ -85,16 +85,33 @@
             <a class="nav-link" ui-sref='contactus'>contact us</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
+
     </nav>
   </header>
   <div ui-view>
 
   </div>
+  <div class="cart-icon" ng-click="cartStyle={'width': '250px'}"><i class="fas fa-shopping-cart"></i></div>
+  <!-- Cart Show -->
+  <div id="cart" class="viewcart" ng-show="cart.length !== 0" ng-style="cartStyle">
+    <div class="cart-head">
+      <h3>CART-SHOW</h3>
+      <a class="closebtn" ng-click="cartStyle={'width': '0'}">&times;</a>
+    </div>
+    <div class="cart-body">
+      <ul class="list-group">
+        <li class="list-group-item" ng-repeat="c in cart">
+          <h4>{{c.name}} | <span style="color:blue"> {{c.count}} </span>
+            | {{c.price*c.count | currency}}</h4>
+          <input class="btn btn-danger" type="button" ng-click="removeItemCart(c)" value="Remove" />
+        </li>
+      </ul>
+      <h3>Total : {{total | currency}}</h3>
+    </div>
+    <div class="cart-foot"><a ui-sref='cart'>view cart</a></div>
+  </div>
+  <!-- End of CartShow -->
   <div class="contact">
     <a href=""><i class="fab fa-facebook-square"></i></a>
     <a href=""><i class="fab fa-instagram"></i> </a>
