--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             <a class="nav-link" ui-sref='products'>Products</a>
           </li>
           <li class="nav-item" ui-sref-active='active'>
-            <a class="nav-link" ui-sref='aboutus'>about us</a>
+            <a class="nav-link" ui-sref='aboutus'>About Us</a>
           </li>
           <li class="nav-item" ui-sref-active='active'>
-            <a class="nav-link" ui-sref='contactus'>contact us</a>
+            <a class="nav-link" ui-sref='contactus'>Contact Us</a>
           </li>
         </ul>
       </div>
