--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <script src="https://rawgit.com/ismarslomic/angular-read-more/master/dist/readmore.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-sanitize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.7/angular-touch.min.js"></script>
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script>
+  <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.10.3/TweenMax.min.js"></script> -->
   <!-- Slick JS -->
   <!-- script -->
   <script src="https://code.angularjs.org/1.4.8/angular.js"></script>
