--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     </div>
     <div class="cart-body">
       <ul class="list-group">
-        <li class="list-group-item" ng-repeat="c in cart">
+        <li class="list-group-item" ng-repeat="c in carts">
           <h4>{{c.name}} | <span style="color:blue"> {{c.count}} </span>
             | {{c.price*c.count | currency}}</h4>
           <input class="btn btn-danger" type="button" ng-click="removeItemCart(c)" value="Remove" />
         </li>
       </ul>
-      <h3>Total : {{total | currency}}</h3>
+      <h3>Total : {{totals | currency}}</h3>
     </div>
     <div class="cart-foot"><a ui-sref='cart'>view cart</a></div>
   </div>
