--- a/index.html
+++ b/index.html
@@ -167,22 +167,51 @@
       </form>
     </div> <!-- end chat -->
   </div> <!-- end live-chat -->
-  <footer class="">
+  <footer class="footer">
     <div class="foot ">
-      <p class="">©2019 by Venus-Handicrafts.</p>
-      <span class="footer-menu ">
-        <a ui-sref='home'>Home</a>
-        <a ui-sref='gallery'>Gallery</a>
-        <a ui-sref='products'>Products</a>
-        <a ui-sref='aboutus'>About Us</a>
-        <a ui-sref='contactus'>Contact Us</a>
-      </span>
-      <div class="contact2">
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-instagram"></i> </a>
-        <a href=""><i class="fab fa-twitter-square"></i></a>
+      <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
+          <header class="footer-title">
+            <h2>Policy</h2>
+          </header>
+          <div class="FooterLink">
+            <a href="#"><p>Sales Policy</p></a>
+          </div>
+          <div class="FooterLink">
+            <a href="#"><p>Privacy Policy</p></a>
+          </div>
+          <div class="FooterLink">
+            <a href="#"><p>Payment Policy</p></a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
+          <header class="footer-title">
+            <h2>Customer Service</h2>
+          </header>
+          <div class="FooterLink">
+            <a href="#"><p>My Order</p></a>
+          </div>
+          <div class="FooterLink">
+            <a href="#"><p>Help Center</p></a>
+          </div>
+          <div class="FooterLink">
+            <a href="#"><p>Report a Bug</p></a>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12 footer-column">
+          <header class="footer-title">
+            <h2>Reach Us</h2>
+          </header>
+          <p>8 Ton That Thuyet St,Nam Tu Liem,Hanoi</p>
+          <p>Tell: +84916-888-991</p>
+          <p>Email: info@venus.com</p>
+          <p>Mon-Fri: 7am-5pm</p>
+          <p>Saturday: 8am-5pm</p>
+          <p>Sunday:8am-11pm</p>
+        </div>
       </div>
-    </div>
+      <div class="CopyRight">
+        Copyright &copy; 2019 by Venus-Handicraft.
+      </div>
   </footer>
 </body>
 
