--- a/html/home.html
+++ b/html/home.html
@@ -7,11 +7,11 @@
   </div>
 </div>
 <div class="respon">
-  <div class="aboutus">
+<div class="aboutus">
       <div class="row">
         <div class="col-lg-8 col-md-8 col-sm-12 wrapper" >
           <div class="container">
-            <div class="content-about">
+            <div class="content">
               <div class="image-about">
                 <img src="images/about/pottery.jpg" alt="" width="250" height="250">
               </div>
@@ -21,7 +21,7 @@
                   <p>Venus Handicraft was established in 1988 as a company specializing in providing handicraft collections for people all over the world [...]</p>
                 </div>
                 <div class="button-about">
-                <button class="btn btn-primary btn-sm">Read More</button>
+                <a ui-sref='aboutus'><button class="btn btn-primary btn-sm">READ MORE</button></a>
                 </div>
               </div>
             </div>
@@ -29,11 +29,12 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12">
           <div class="gallery-at-home">
-            <a href="html/gallery.html"><img src="images/gallery-at-home.jpg" alt="" width="300px" height="300px"></a>
+            <a ui-sref="gallery"><img src="images/gallery-at-home.jpg" alt="" width="300px" height="300px"></a>
           </div>
         </div>
       </div>
   </div>
+
 
   <div class="list">
       <div class="mt-4">
