--- a/html/cart.html
+++ b/html/cart.html
@@ -74,6 +74,8 @@
             <tr>
                 <td rowspan="4">
                     Add a note
+                    <br>
+                    <textarea id="addnote" name="name" rows="4" cols="20" placeholder="Instructions? Special requests? Add them here"></textarea>
                 </td>
                 <td>
                     Subtotal
